2005-10-20  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Collect an return value when getting media type, and check for
	errors.

2005-10-11  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Protect against FileChooserButton returning a NULL path (#317999)

2005-10-07  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Build without libcdio (thanks William Jon McCann).

2005-10-07  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	Protect against invalid iterators.

2005-10-07  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* src/sound-juicer.h:
	* src/sj-main.c:
	Add --enable-debug and start using it.

2005-10-03  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* src/Makefile.am:
	* src/sj-metadata-cdtext.c:
	* src/sj-metadata-cdtext.h:
	Add start of CD-TEXT metadata backend.

2005-10-03  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Add Funk to the genre list, to please Shaun (closes #314851).

2005-10-03  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.desktop.in:
	Use Extractor rather than Ripper (closes #315283).

2005-10-01  Runa Bhattacharjee <runa@bengalinux.org>

	* configure.in: Added "bn" (Bengali) to ALL_LINGUAS.

2005-09-19  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.12.2.

2005-09-19  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Fix the totally broken --device

2005-09-18  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.12.1.

2005-09-10  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Translate the Extract stock item.

2005-09-10  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Add a --device option for gnome-volume-manager.

2005-09-06  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	Add a cast.

2005-09-06  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Set the cdparanoia read speed preference on every rip, just to
	make sure.

2005-09-06  Ross Burton  <ross@burtonini.com>
