@@ -37,7 +37,7 @@ AC_SUBST(GLIB_CFLAGS)
 AC_SUBST(GLIB_LIBS)
 
 # Find nautilus-burn
-PKG_CHECK_MODULES(BURN, libnautilus-burn >= 2.11.1)
+PKG_CHECK_MODULES(BURN, libnautilus-burn >= 2.13.1)
 AC_SUBST(BURN_CFLAGS)
 AC_SUBST(BURN_LIBS)
 
