@@ -1,3 +1,10 @@
+2005-10-19  William Jon McCann  <mccann@jhu.edu>
+
+	* src/sj-main.c (media_added_cb, media_removed_cb)
+	(set_drive_from_device, set_device, device_changed_cb, main):
+	* configure.in:
+	Use nautilus-cd-burner 2.13 monitoring.  Fixes #317864.
+
 2005-10-20  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-main.c:
